--- a/restaurants/templates/list.html
+++ b/restaurants/templates/list.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>List</title>
-    </head>
-    <body>
+{% extends "base.html" %}
+{% block title %}List{% endblock title %}
+{% block content %}
         {% for restaurant in restaurants %}
             <a href="{% url 'restaurant-detail' restaurant.id %}">
                 <ul>
@@ -16,7 +12,6 @@
             </a>
             <a href="{% url 'restaurant-delete' restaurant.id %}">Delete</a>
             <a href="{% url 'restaurant-update' restaurant.id %} ">Update</a>
-        {% endfor %}
+        {% endfor %}<br>
         <a href="{% url 'restaurant-create'  %} ">Create</a>
-    </body>
-</html>
+{% endblock content %}
