--- a/restaurants/templates/update.html
+++ b/restaurants/templates/update.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Update</title>
-    </head>
-    <body>
+{% extends "base.html" %}
+{% block title %}Update{% endblock title %}
+{% block content %}
         <form action="{% url 'restaurant-update' restaurant_id=obj.id %}" method="POST">
             {% csrf_token %}
             {{form.as_p}}
             <input type="submit" value="Update">
         </form>
-    </body>
-</html>
+{% endblock content %}
